--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,24 @@
+/* Font */
 @import url("https://fonts.googleapis.com/css?family=Poppins");
+*{
+    padding: 0;
+    margin: 0;
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+body{
+    width: 100%;
+    height: 768px;
+    background-image: url(../img/bg-main.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: sticky;
+}
+/* Header */
 header {
-    position: fixed;
+    position: sticky;
     top: 0px;
     left: 0px;
     width: 100%;
@@ -50,4 +68,57 @@ header {
     border-top: 1px solid whitesmoke;
     border-bottom: 1px solid whitesmoke;
     background-color: rgba(255, 255, 255, 0.4);
+}
+.selected{
+    
+    font-size: 15px;
+    border-top: 1px solid whitesmoke;
+    border-bottom: 1px solid whitesmoke;
+}
+
+/* main */
+main{
+    background-color: white;
+    width: 94%;
+    margin: 2%;
+    border-radius: 20px;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.container{
+    margin: 10px;
+    padding: 10px;
+    height: 500px;
+}
+.side-left{
+    float: left; /* saat dikecilkan ke smartphone, hapus aja code ini */
+}
+.side-right{
+    margin-top: 20px;
+}
+.img-content{
+    width: 300px;
+    margin-right: 20px;
+}
+.line{
+    width: 100%;
+    height: 2px;
+    background-color: black;
+}
+#status{
+    color: red;
+}
+.linktowiki{
+    background-color: #275181;
+    /* width: fit-content; */
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
+}
+.linktowiki:hover{
+    background-color: #183658;
+    /* width: fit-content; */
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
 }
