--- a/css/styles.css
+++ b/css/styles.css
@@ -128,8 +128,9 @@ footer
 {
     background-color: rgba(0, 0, 0) ;
     width: 100%;
-    height:20%;
+    height:25%;
     margin:0px;
+    text-align: center;
     
     
 }
@@ -140,21 +141,20 @@ footer img{
    
 }
 
-footer p
+.copy
 {
     color:white;
     font-family: "Poppins", Arial, sans-serif;
-    margin-top: 5px;
-    float: right;
-    margin-right: 10px;
+    display: block;
+    background-color: rgba(0, 0, 0, 0.87);
+    text-align: center;
 }
 .socmed{
     text-decoration: none;
-    float: right;
+    padding-bottom: 10px;
     margin-right: 2%;
     margin-top: 2%;
-    
-    
+     
 }
 .socmed img
 {
@@ -163,30 +163,16 @@ footer p
     background-color:white ;
     border-radius: 10%;
     border: none;
-    margin-left: 5px;
+       
 }
-.socmed img:hover
+.follow 
 {
-    transition: 0.3s;
-    width: auto;
-    height: 35px;
-    margin-left:0px; 
+    color: #ffffff;
+    font-family: "Poppins", Arial, sans-serif;
+    margin-top: 10px;
 }
-.clear
-{
-    clear: left;
-}
-.copy
-{
-    float: none;
-    text-align: center;
-    padding-top: 5%;
-    
-}
-.main-copy
-{
-    background-color: rgba(0, 0, 0, 0.925);
-}
+
+
 
 
 
