--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,7 @@ main {
   color: black;
   font-family: Arial, Helvetica, sans-serif;
 }
-.menu-icon {
+.fa {
   color: white;
   float: right;
   font-size: 50px;
